--- a/Builds/index.html
+++ b/Builds/index.html
@@ -109,8 +109,8 @@ body {
 	visibility: visible;
 }
 		</style>
-		<link id='-gd-engine-icon' rel='icon' type='image/png' href='Piktiv Remote Summer Game Jam.icon.png' />
-<link rel='apple-touch-icon' href='Piktiv Remote Summer Game Jam.apple-touch-icon.png'/>
+		<link id='-gd-engine-icon' rel='icon' type='image/png' href='index.icon.png' />
+<link rel='apple-touch-icon' href='index.apple-touch-icon.png'/>
 
 	</head>
 	<body>
@@ -135,9 +135,9 @@ body {
 			<div id="status-notice" class="godot" style="display: none;"></div>
 		</div>
 
-		<script src="Piktiv Remote Summer Game Jam.js"></script>
+		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"Piktiv Remote Summer Game Jam","experimentalVK":false,"fileSizes":{"Piktiv Remote Summer Game Jam.pck":379104,"Piktiv Remote Summer Game Jam.wasm":51179274},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":355120,"index.wasm":37259276},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
